@@ -39,11 +39,20 @@ class start_result_viewer implements pts_option_interface
 		{
 			echo PHP_EOL . pts_client::cli_just_bold('Access Key: ') . pts_client::$web_result_viewer_access_key;
 		}
-                echo PHP_EOL . 'Press CTRL^C when done accessing the viewer to end the process...';
-                while(true){
-                    pts_user_io::read_user_input();
-                }
 
+		if(!isset($r[0]) || $r[0] != 'daemon')
+		{
+			echo PHP_EOL . 'Press any key when done accessing the viewer to end the process...';
+			pts_user_io::read_user_input();
+		}
+		else
+		{
+			echo PHP_EOL . 'Press CTRL^C when done accessing the viewer to end the process...';
+			while(true)
+			{
+				pts_user_io::read_user_input();
+			}
+                }
 	}
 }
 
