@@ -3,6 +3,7 @@ PHORONIX TEST SUITE CHANGE-LOG
 Phoronix Test Suite (Git)
 
 pts-core: Honor NO_COLOR environment variable for disabling terminal coloring
+pts-core: Allow launching just the result viewer from systemd
 
 Phoronix Test Suite 10.0.0 Milestone 1
 19 August 2020
